--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
@@ -27,6 +28,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "swagger-ui-react": "^5.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.37",
@@ -34,18 +36,25 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/swagger-ui-react": "^4.18.3",
     "@types/ua-parser-js": "^0.7.39",
     "@types/valid-url": "^1.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "jest": "^29.7.0",
+    "msw": "^2.0.13",
     "postcss": "^8",
     "prisma": "^5.7.1",
+    "supertest": "^6.3.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
