--- a/public/userRegAPI.yaml
+++ b/public/userRegAPI.yaml
@@ -1,7 +1,10 @@
 openapi: 3.0.0
 info:
   title: User Registration API
+  description: API for registering a new user
   version: 1.0.0
+servers:
+  - url: http://localhost:3000
 paths:
   /api/user:
     post:
